Fixing some strings

--- a/src/components/shared/Form/Checkbox/Checkbox.scss
+++ b/src/components/shared/Form/Checkbox/Checkbox.scss
@@ -12,11 +12,11 @@
 label {
   display: inline-block;
   vertical-align: middle;
-  width: calc(100% - 30px);
+  // width: calc(100% - 30px);
 }
 
 .Checkbox__label {
   display: inline-block; /* Display label inline */
   vertical-align: middle; /* Align label vertically */
-  width: calc(100% - 30px); /* Adjust label width to accommodate checkbox */
+  // width: calc(100% - 30px);
 }
